[tool.poetry]
name = "workout"
version = "0.1.0"
description = ""
authors = ["Brunods10 <brunods1001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
Pint = "^0.17"
neo4j = "^4.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.9.3"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
